# spectra

./: .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  ISSUE_TEMPLATE.md  LICENSE  Makefile  Pipfile  README.md  README.rst  conf.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: publish-docker.yml  test.yml
docs/: Makefile  fit.rst  index.rst  installation.rst  make.bat  modules.rst  nD_spectrum.rst  progress.rst  reaction_kinetics.rst  spectrum.rst  usage.rst
samples/IR/: ir.py  ir.zsh
samples/IR/data/: HDI.csv  methanol.csv
samples/computing_spectra/: README.md  ir.py  psi4_runner.py  pyscf_runner.py  tddft.py
samples/computing_spectra/molecules/: water.zmat
samples/reaction_kinetics/: 1-butanol + N 3400  reaction_kinetics.py
spectra/: __init__.py  __main__.py  _abc_spectrum.py  _typing.py  continuous_spectrum.py  conv_spectrum.py  discrete_spectrum.py  fit.py  ir_plotter.py  kinetics.ini  nD_spectrum.py  plot.py  plotter.py  progress.py  reaction_kinetics.py  shapes.py  spectrum.py  sspectrum.py  sticks_spectrum.py  tools.py
spectra/scripts/: correlate_spectra  correlate_spectra.py  plot_spectra  plot_spectra.py
test/: test_fit.py  test_plot.py  test_progress.py  test_reaction_kinetics.py  test_spectrum.py  test_tools.py
test/files/: xrd.csv
test/files/1-butanol + N 3400/0.01% T12/Round 1/: Fri Aug 02 08-44-06 2019 (GMT-04-00).CSV  Fri Aug 02 08-44-28 2019 (GMT-04-00).CSV  Fri Aug 02 08-45-38 2019 (GMT-04-00).CSV  Fri Aug 02 08-47-41 2019 (GMT-04-00).CSV  Fri Aug 02 08-49-47 2019 (GMT-04-00).CSV  Fri Aug 02 08-56-35 2019 (GMT-04-00).CSV  Fri Aug 02 10-51-22 2019 (GMT-04-00).CSV  Fri Aug 02 11-56-15 2019 (GMT-04-00).CSV  Fri Aug 02 12-15-16 2019 (GMT-04-00).CSV  Fri Aug 02 12-34-01 2019 (GMT-04-00).CSV  Fri Aug 02 14-50-21 2019 (GMT-04-00).CSV  Fri Aug 02 15-47-31 2019 (GMT-04-00).CSV  Fri Aug 02 16-04-39 2019 (GMT-04-00).CSV
test/files/1-butanol + N 3400/0.03% T12/Round 1/: Thu Aug 01 08-50-06 2019 (GMT-04-00).CSV  Thu Aug 01 08-52-35 2019 (GMT-04-00).CSV  Thu Aug 01 08-53-17 2019 (GMT-04-00).CSV  Thu Aug 01 08-59-04 2019 (GMT-04-00).CSV  Thu Aug 01 09-06-11 2019 (GMT-04-00).CSV  Thu Aug 01 09-08-43 2019 (GMT-04-00).CSV  Thu Aug 01 09-12-37 2019 (GMT-04-00).CSV  Thu Aug 01 09-32-45 2019 (GMT-04-00).CSV  Thu Aug 01 09-52-59 2019 (GMT-04-00).CSV  Thu Aug 01 10-01-52 2019 (GMT-04-00).CSV  Thu Aug 01 10-26-53 2019 (GMT-04-00).CSV  Thu Aug 01 10-40-26 2019 (GMT-04-00).CSV  Thu Aug 01 10-59-12 2019 (GMT-04-00).CSV  Thu Aug 01 11-11-38 2019 (GMT-04-00).CSV  Thu Aug 01 11-38-04 2019 (GMT-04-00).CSV  Thu Aug 01 12-03-03 2019 (GMT-04-00).CSV  Thu Aug 01 13-03-06 2019 (GMT-04-00).CSV  Thu Aug 01 13-18-22 2019 (GMT-04-00).CSV  Thu Aug 01 13-36-36 2019 (GMT-04-00).CSV
test/files/1-butanol + N 3400/0.10% T12/Round 1/: Mon Jul 29 13-20-49 2019 (GMT-04-00).CSV  Mon Jul 29 13-22-14 2019 (GMT-04-00).CSV  Mon Jul 29 13-22-34 2019 (GMT-04-00).CSV  Mon Jul 29 13-24-06 2019 (GMT-04-00).CSV  Mon Jul 29 13-24-47 2019 (GMT-04-00).CSV  Mon Jul 29 13-25-54 2019 (GMT-04-00).CSV  Mon Jul 29 13-27-02 2019 (GMT-04-00).CSV  Mon Jul 29 13-33-15 2019 (GMT-04-00).CSV  Mon Jul 29 13-33-56 2019 (GMT-04-00).CSV  Mon Jul 29 13-58-30 2019 (GMT-04-00).CSV  Mon Jul 29 14-05-35 2019 (GMT-04-00).CSV  Mon Jul 29 14-28-34 2019 (GMT-04-00).CSV  Mon Jul 29 14-50-20 2019 (GMT-04-00).CSV  Mon Jul 29 15-04-26 2019 (GMT-04-00).CSV  Mon Jul 29 15-19-53 2019 (GMT-04-00).CSV  Mon Jul 29 15-52-00 2019 (GMT-04-00).CSV
test/files/1-butanol + N 3400/0.30% T12/Round 1/: Fri Jul 26 08-47-17 2019 (GMT-04-00).CSV  Fri Jul 26 08-47-58 2019 (GMT-04-00).CSV  Fri Jul 26 08-48-40 2019 (GMT-04-00).CSV  Fri Jul 26 08-50-04 2019 (GMT-04-00).CSV  Fri Jul 26 08-51-31 2019 (GMT-04-00).CSV  Fri Jul 26 08-51-53 2019 (GMT-04-00).CSV  Fri Jul 26 08-52-20 2019 (GMT-04-00).CSV  Fri Jul 26 08-53-00 2019 (GMT-04-00).CSV  Fri Jul 26 08-53-40 2019 (GMT-04-00).CSV  Fri Jul 26 08-54-22 2019 (GMT-04-00).CSV  Fri Jul 26 08-55-50 2019 (GMT-04-00).CSV  Fri Jul 26 09-06-14 2019 (GMT-04-00).CSV  Fri Jul 26 09-08-51 2019 (GMT-04-00).CSV  Fri Jul 26 09-24-36 2019 (GMT-04-00).CSV  Fri Jul 26 09-26-11 2019 (GMT-04-00).CSV  Fri Jul 26 09-40-55 2019 (GMT-04-00).CSV  Fri Jul 26 09-44-34 2019 (GMT-04-00).CSV  Fri Jul 26 09-51-23 2019 (GMT-04-00).CSV  Fri Jul 26 10-09-34 2019 (GMT-04-00).CSV
test/files/1-butanol + N 3400/1.00% T12/Round 1/: Thu Jul 25 14-54-32 2019 (GMT-04-00).CSV  Thu Jul 25 14-54-52 2019 (GMT-04-00).CSV  Thu Jul 25 14-55-34 2019 (GMT-04-00).CSV  Thu Jul 25 15-04-41 2019 (GMT-04-00).CSV  Thu Jul 25 15-05-22 2019 (GMT-04-00).CSV  Thu Jul 25 15-09-12 2019 (GMT-04-00).CSV  Thu Jul 25 15-15-18 2019 (GMT-04-00).CSV  Thu Jul 25 15-17-49 2019 (GMT-04-00).CSV  Thu Jul 25 15-34-38 2019 (GMT-04-00).CSV  Thu Jul 25 15-54-55 2019 (GMT-04-00).CSV
tests/: test_continuous_spectrum.py  test_conv_spectrum.py  test_discrete_spectrum.py  test_fit.py  test_plot.py  test_plotter.py  test_progress.py  test_reaction_kinetics.py  test_shapes.py  test_spectrum.py  test_sspectrum.py  test_sticks_spectrum.py  test_tools.py
tests/files/: spectrum1.csv
tests/files/1-butanol + N 3400/0.01% T12/Round 1/: Fri Aug 02 08-44-49 2019 (GMT-04-00).CSV  Fri Aug 02 08-45-10 2019 (GMT-04-00).CSV  Fri Aug 02 08-46-17 2019 (GMT-04-00).CSV  Fri Aug 02 08-47-00 2019 (GMT-04-00).CSV  Fri Aug 02 08-48-30 2019 (GMT-04-00).CSV  Fri Aug 02 08-51-05 2019 (GMT-04-00).CSV  Fri Aug 02 08-52-22 2019 (GMT-04-00).CSV  Fri Aug 02 08-53-54 2019 (GMT-04-00).CSV  Fri Aug 02 08-59-09 2019 (GMT-04-00).CSV  Fri Aug 02 09-05-10 2019 (GMT-04-00).CSV  Fri Aug 02 09-10-45 2019 (GMT-04-00).CSV  Fri Aug 02 09-16-09 2019 (GMT-04-00).CSV  Fri Aug 02 09-27-35 2019 (GMT-04-00).CSV  Fri Aug 02 09-33-20 2019 (GMT-04-00).CSV  Fri Aug 02 09-44-36 2019 (GMT-04-00).CSV  Fri Aug 02 09-54-12 2019 (GMT-04-00).CSV  Fri Aug 02 10-04-55 2019 (GMT-04-00).CSV  (+20 more)
(+187 files in other folders)
