[tool.poetry]
name = "Spectra"
version = "0.6.0"
description = "A package for plotting and manipulating 1D spectra"
authors = ["Jonathon Vandezande"]
keywords = ["chemistry", "plotting", "spectra"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jevandezande/spectra"

[tool.poetry.dependencies]
python = "^3.10"
lmfit = "*"
matplotlib = "*"
natsort = "*"
numpy = "*"
scipy = "*"

[tool.poetry.group.dev.dependencies]
black = "==22.10"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
correlate = "spectra.scripts.correlate_spectra:main"
plot_spectra = "spectra.scripts.plot_spectra:main"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
files = ["spectra", "tests"]
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
