[tool.poetry]
name = "Spectra"
version = "0.7.0"
description = "A package for plotting and manipulating 1D spectra"
authors = ["Jonathon Vandezande"]
keywords = ["chemistry", "plotting", "spectra"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jevandezande/spectra"

[tool.poetry.dependencies]
python = "^3.11"
lmfit = "*"
matplotlib = "*"
natsort = "*"
numpy = "*"
scipy = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pre-commit = "*"
ruff = ">=0.1.3"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
correlate = "spectra.scripts.correlate_spectra:main"
plot_spectra = "spectra.scripts.plot_spectra:main"

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = ["E731"]

[tool.mypy]
files = ["spectra", "tests"]
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
