[metadata]
name = Spectra
description = A package for plotting and manipulating 1D spectra
author = Jonathon Vandezande
home-page = https://github.com/jevandezande/spectra
long-description = file: README.rst
license = MIT
license-file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[flake8]
ignore = E203, E266, E501, W503, E731
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 120

[mypy]
files=spectra
ignore_missing_imports = true

[tool:pytest]
testpaths = test/

[pylint]
max-line-length=120

[pylint:messages_control]
disable = C0330, C0326

[options]
package_dir = .
packages = spectra
python_requires = >= 3.8
test_suite = test/

[options.entry_points]
console_scripts =
    correlate_spectra = spectra.scripts.correlate_spectra:main
    plot_spectra = spectra.scripts.plot_spectra:main
